# ai_platform

./: .dockerignore  .gitignore  Cargo.toml  README.md  commands.txt  commands_cluster_lora.txt  commands_cluster_lora_apptainer.txt  commands_local.txt  docker-compose.yml
artifacts/rag/: chunks.json  embeddings.json  manifest.json
docs/: 01_local_dev.md  02_slurm.md  03_apptainer.md  04_k3s.md  05_registry.md  06_ai_platform_k3s.md  07_rag_slurm_pipeline.md  08_llama_cpp.md  09_host_llama_cpp_integration.md  10_lora_inference.md  11_lora_training_slurm.md  11_lora_training_slurm_apptainer_k3s.md  12_lora_routing_and_direct_response_mode.md
host/: Cargo.toml  dockerfile
host/src/: adapters.rs  api.rs  config.rs  domain.rs  main.rs
host/src/adapters/: embeddings_retriever.rs  http_tool_provider.rs  inmemory_markdown_retriever.rs  mcp_tool_provider.rs  noop_retriever.rs  ollama_llm_backend.rs  openai_compat_llm_backend.rs  tools_client.rs  vllm_llm_backend.rs
host/src/domain/: llm_backend.rs  llm_loop.rs  query_router.rs  retriever.rs  tool_provider.rs
infra/: README.md
infra/ansible/: commands.txt  commands_apptainer.txt  commands_k3s.txt  commands_slurm.txt  requirements.txt
k3s_test_manifests/: ai-platform-host.yml
knowledge_base/engineering/: architecture-overview.md  incident-response.md  local-dev-setup.md
llm_client/: Cargo.toml
rag_indexer/: Cargo.toml  dockerfile
rag_indexer_jetson/: Cargo.toml
rag_indexer_jetson/src/: chunking.rs  embedding_client.rs  main.rs  shared_types.rs
scripts/: build_and_push_lora_training_cuda_image.sh  build_and_push_lora_training_image.sh  build_lora_training_image_on_jetson.sh  build_lora_training_sif_on_jetson.sh  build_push_ai_platform_host_arm64.sh  build_push_rag_indexer_arm64.sh  sync_k3s_manifests.sh  sync_llama_cpp_runtime_image_to_jetson.sh  sync_lora_assets_to_nfs.sh  sync_lora_slurm_jobs_to_nfs.sh  sync_lora_training_to_jetson.sh  sync_rag_indexer_jetson.sh  sync_rag_knowledge_base.sh  sync_rag_slurm_jobs_to_nfs.sh
shared_types/: Cargo.toml
tools_server/: Cargo.toml  dockerfile
tools_server/src/: api.rs  config.rs  main.rs  mcp_server.rs  tools.rs
tools_server/src/tools/: search_docs.rs  weather.rs
(+133 files in other folders)
