[package]
name = "tools-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types = { path = "../shared_types" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

rmcp = { version = "1.2.0", features = ["server", "transport-io", "schemars"] }
